test/files/neg/t5452.check
t5452.scala:28: error: overloaded method value apply with alternatives:

 cannot be applied to (Queryable[CoffeesTable])
  Queryable[CoffeesTable](  q.treeFilter(null)  )
           ^
one error found
